objects/Loopio__Loopio_Project__c.object
<CustomObject>
    <description>This object represents a Loopio project.  These are intended to be created only by the Loopio integration, and all default fields will be managed by Loopio.</description>
    <fields>
        <fullName>Loopio__Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Loopio__Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Loopio__Loopio_Project_Detail__c</fullName>
        <formula>HYPERLINK(&apos;/apex/Loopio__Loopio_Project_Detail?Id=&apos; &amp; Id, &apos;View Project&apos;, &apos;_self&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Loopio Project Detail</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loopio__Number_of_Assigned_Questions__c</fullName>
        <inlineHelpText>Number of questions assigned to a user and awaiting submission</inlineHelpText>
        <label>Assigned Questions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Loopio__Number_of_Complete_Questions__c</fullName>
        <inlineHelpText>Total number of questions marked as complete</inlineHelpText>
        <label>Completed Questions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Loopio__Number_of_Pending_Questions__c</fullName>
        <inlineHelpText>Number of questions pending action and that have not been assigned, submitted for review, or marked as complete</inlineHelpText>
        <label>Pending Questions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Loopio__Number_of_Review_Questions__c</fullName>
        <inlineHelpText>Number of questions submitted for review</inlineHelpText>
        <label>Questions to Review</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Loopio__Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Loopio</relationshipLabel>
        <relationshipName>Loopio_Projects</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Loopio__Owner_Name__c</fullName>
        <label>Owner Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loopio__Percent_Complete_Questions__c</fullName>
        <formula>IF(
   OR(
       ISNULL(Loopio__Total_Number_of_Questions__c),
       Loopio__Total_Number_of_Questions__c = 0
   ),
   0,
   BLANKVALUE(Loopio__Number_of_Complete_Questions__c, 0) / Loopio__Total_Number_of_Questions__c
)</formula>
        <inlineHelpText>Percentage of Total Questions that are marked as complete</inlineHelpText>
        <label>Percent Completed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Loopio__Status__c</fullName>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loopio__Total_Number_of_Questions__c</fullName>
        <description>Total number of questions in the Project, regardless of state</description>
        <formula>Loopio__Number_of_Assigned_Questions__c +
 Loopio__Number_of_Complete_Questions__c +
 Loopio__Number_of_Pending_Questions__c +
 Loopio__Number_of_Review_Questions__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total number of questions in the Project, regardless of state</inlineHelpText>
        <label>Total Questions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Loopio</label>
    <listViews>
        <fullName>Loopio__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Loopio Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Loopio</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>